# miblib

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: customer.py
mib/: __init__.py
mib/bq/: __init__.py  _proto_helper.py  _writer.py
mib/mock/: __init__.py
tests/integration/: test_integration.py
